[package]
name = "photobooth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
drm = "0.14"
fontdue = { version = "0.9", features = ["parallel", "std"] }
libc = "0.2"
libcamera = { version = "0.4", features = ["libcamera_semver_versioning", "vendor_rpi"], default-features = false }
log = "0.4"
log4rs = "1.4"
ouroboros = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
