[package]
name = "photobooth"
version = "0.1.0"
edition = "2024"
license = "GPLv3"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
drm = "0.14"
emojis = "0.8"
fontdue = { version = "0.9", features = ["parallel", "std"] }
image = "0.25"
input = "0.9"
libc = "0.2"
libcamera = { version = "0.4", features = ["libcamera_semver_versioning", "vendor_rpi"], default-features = false }
log = "0.4"
log4rs = "1.4"
ouroboros = "0.18"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sys-mount = "3.0"
sysinfo = "0.36"
unicode-segmentation = "1.12"
